Closed Bug 1256501 Opened 8 years ago Closed 8 years ago

widget/windows/nsWindow.cpp(2210): warning C4312: 'reinterpret_cast': conversion from 'int' to 'HANDLE' of greater size

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: gps, Unassigned)

References

Details

Attachments

(1 file, 1 obsolete file)

We're seeing this warning turned into an error when building with VS2015u1 in automation.
As part of unblocking building with VS2015u1 in automation, I'm mass
disabling compiler warnings that are turned into errors. This is not
the preferred mechanism to fix compilation warnings. So hopefully
this patch never lands because someone insists of fixing the underlying
problem instead. But if it does land, hopefully the workaround is
only temporary.

Review commit: https://reviewboard.mozilla.org/r/39893/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/39893/
Attachment #8730465 - Flags: review?(aklotz)
Comment on attachment 8730465 [details]
MozReview Request: Bug 1256501 - Disable C4312 to unblock compilation on VS2015; r?aklotz

https://reviewboard.mozilla.org/r/39893/#review37939

I'll land a proper fix for this one.
Attachment #8730465 - Flags: review?(aklotz)
Attachment #8732991 - Flags: review?(jmathies) → review+
Comment on attachment 8732991 [details]
MozReview Request: Bug 1256501: Fix warning C4312 with 64-bit VS2015 in widget/windows/nsWindow.cpp; r?jimm

https://reviewboard.mozilla.org/r/41495/#review38023
https://hg.mozilla.org/mozilla-central/rev/b718c3f4e82f
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Attachment #8730465 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.