Bug 1256501: Fix warning C4312 with 64-bit VS2015 in widget/windows/nsWindow.cpp; r=jimm

MozReview-Commit-ID: 4JdQs90t4Fe

--HG--
extra : rebase_source : 1c974f4536f72f625a4e594d31ac06e7071d15b3